--- a/document-example.html
+++ b/document-example.html
@@ -32,12 +32,12 @@
             <div id="loading">Loading video...</div>
             <video id="video"></video>
         </div>
-        <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="dist/scrub.min.js"></script>
         <script>
             var $loading = $('#loading');
             var $video = $('#video');
-            var baseUrl = 'http://d37cztry6hjvzg.cloudfront.net/mp4/ua5/';
+            var baseUrl = 'https://d37cztry6hjvzg.cloudfront.net/mp4/ua5/';
 
             $video.on('loaded', function() {
                 $loading.hide();
