--- a/inside-div-example.html
+++ b/inside-div-example.html
@@ -44,12 +44,12 @@
         <div id="container">
             <div id="content"><div id="loading">Loading video...</div></div>
         </div>
-        <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="dist/scrub.min.js"></script>
         <script>
             var $loading = $('#loading');
             var $video = $('#video');
-            var baseUrl = 'http://d37cztry6hjvzg.cloudfront.net/mp4/ua5/';
+            var baseUrl = 'https://d37cztry6hjvzg.cloudfront.net/mp4/ua5/';
 
             $video.on('loaded', function() {
                 $loading.hide();
